	  - In include/pql.inc:pql_header(), only add the URI if it's not already set.
	  - Fixup the check for add/save in include/pql_formating.inc:pql_create_ldif()
	    only one ereg()!
	  - If pql_get_define() finds an undefined value, it will return '0'. And
	    the problem is that: if("text" == 0) will evaluate to TRUE. Solve this
	    by using sprintf() like this: if("text" == sprintf("%s", 0).

 	GUI layout changes
	  - Add the string 'characters' after the 'Minimum password length' in 'Add ppolicy'
	    form.
	  - Rewrite of the DHCP3 manager - domain oriented instead of host. DHCP information
	    is now under a/the domain branch, not under the physical server.
	  - Work on a RADIUS profile manager started.
	    + Missing: Adding RADIUS profile object. Waiting for explanation of what the
		       different attributes are for...

 	Misc changes
	  - Catch the '2.X' version (which is CVS - hopfully it's >2.4).
	  - Create a userSearchFilter attribute (which can be set in 'Home->phpQLAdmin Configuration->[branch]'.
	    This can be used instead of the userReference attribute to find users etc. If
	    not defined, the userReference attribute is still required...
	  - Create a DHCP3 manager for the DHCP3 patch at http://home.ntelos.net/~masneyb/.
	  - When domain admin (not superadmin) is adding a branch admin to 'his/her' branch,
	    only get users from that/those branch(-es). Wanted by Ing. Fernando Villarreal - Silice S.A.
	  - Allow to disable 'Advanced mode' selector for specific user. Wanted by
	    Ing. Fernando Villarreal - Silice S.A.

phpQLAdmin 2.3.7 Release (May 10 2007)
	Bug fixes
	  - Almost a complete rewrite of the automount manager:
	    + Support creating a submount (mountpoint link)
	    + Function to get the all the mountpoints recursivly (mountpoint link on a
	      mountpoint link) using attribute_find_mountpoints().
	    + Catch the iso9660 mount options already availible in the form.